# project-Group23

./: .buildinfo  Analysis of ridership of stations with different land use.html  Analysis of ridership of stations with different land use.ipynb  Analysis_of_Ridership_of_Stations_with_Different_Land_Use.html  Analysis_of_Ridership_of_Stations_with_Different_Land_Use.ipynb  EDA_SHC.ipynb  Jiachen_EDA.ipynb  Jingya_EDA.ipynb  Jingya_new_EDA.ipynb  Makefile  Mapping_Ridership.html  Mapping_Ridership.ipynb  Modeling_Post_Covid_Ridership_Using_Pre_Covid_Data.html  Modeling_Post_Covid_Ridership_Using_Pre_Covid_Data.ipynb  Noor_EDA.ipynb  README.md  Ridership_Standard_Deviation_Analysis.html  Ridership_Standard_Deviation_Analysis.ipynb  SF_interactive_map.html  Untitled.ipynb  Util.ipynb  _config.yml  _toc.yml  environment.yml  genindex.html  intro.html  intro.md  main.html  main.ipynb  objects.inv  requirements.txt  search.html  searchindex.js  setup.cfg
.github/workflows/: book.yml
.ipynb_checkpoints/: Jingya_EDA-checkpoint.ipynb
Data/: station-names.xls
Data/ridership_2001/: April 2001 Entry_Exit Matrices.xls  (+11 more)
_sources/: Analysis of ridership of stations with different land use.ipynb  Analysis_of_Ridership_of_Stations_with_Different_Land_Use.ipynb  Mapping_Ridership.ipynb  Modeling_Post_Covid_Ridership_Using_Pre_Covid_Data.ipynb  Ridership_Standard_Deviation_Analysis.ipynb  intro.md  main.ipynb
figures/: SF_interactive_map.html  berkeley_interactive_map.html
project_tools/: __init__.py  utils.py
project_tools.egg-info/: PKG-INFO  SOURCES.txt
(+49 files in other folders)
